force-app/main/default/objects/PHI_Field_Registry__c/PHI_Field_Registry__c.object-meta.xml
<CustomObject>
    <label>PHI Field Registry</label>
    <pluralLabel>PHI Field Registry</pluralLabel>
    <description>Canonical registry of object fields classified for PHI sensitivity by the PHI Data Classification Engine (issue #212, HIPAA pack).</description>
    <nameField>
        <label>PHI Field Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>