force-app/main/default/objects/PHI_Field_Registry__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>Sensitivity classification assigned to the field.</description>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PHI</fullName>
            </value>
            <value>
                <fullName>Sensitive</fullName>
            </value>
            <value>
                <fullName>Non-Sensitive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>