force-app/main/default/objects/PHI_Field_Registry__c/fields/Detection_Method__c.field-meta.xml
<CustomField>
    <fullName>Detection_Method__c</fullName>
    <description>How the classification was determined.</description>
    <label>Detection Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Name Pattern</fullName>
            </value>
            <value>
                <fullName>Field Type Heuristic</fullName>
            </value>
            <value>
                <fullName>Metadata Rule</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>