force-app/main/default/objects/PHI_Field_Registry__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>API name of the classified field.</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>