force-app/main/default/objects/PHI_Field_Registry__c/fields/Field_Key__c.field-meta.xml
<CustomField>
    <fullName>Field_Key__c</fullName>
    <description>Unique key (ObjectApiName.FieldApiName) used to upsert classification results idempotently.</description>
    <externalId>true</externalId>
    <label>Field Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>