force-app/main/default/objects/PHI_Field_Registry__c/fields/Last_Evaluated__c.field-meta.xml
<CustomField>
    <fullName>Last_Evaluated__c</fullName>
    <description>Timestamp of the most recent classification evaluation for this field.</description>
    <label>Last Evaluated</label>
    <type>DateTime</type>
</CustomField>