force-app/main/default/objects/PHI_Field_Registry__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>API name of the object that owns the classified field.</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>