force-app/main/default/objects/PHI_Field_Registry__c/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <description>Human-readable explanation of why the field received its classification.</description>
    <label>Rationale</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>